# acra

./: .env.example  .gitignore  MANIFEST.in  README.md  USAGE.md  pyproject.toml  requirements.txt  setup.py  setup_llm.py
acra/: __init__.py  cli.py
acra/agents/: llm.py  llm_utils.py
acra/agents/coder/: coder_agent.py  coder_chain.py
acra/agents/critic/: critic_agent.py  critic_chain.py
acra/agents/executor/: docker_runner.py  executor_agent.py  sandbox_runner.py
acra/agents/human/: human_node.py
acra/agents/memory/: memory_agent.py  memory_manager.py  retrieval.py
acra/agents/planner/: planner_agent.py  planner_chain.py
acra/agents/researcher/: __init__.py  researcher_agent.py  researcher_chain.py
acra/brain/: __init__.py  model_registry.py  provider_manager.py
acra/commands/: __init__.py  ask.py  brain.py  config.py  context.py  graph.py  keys.py  logs.py  memory.py  plugin.py  research.py  serve.py  session.py  utils.py
acra/config/: __init__.py  defaults.py  profile_manager.py
acra/execution/: __init__.py
acra/execution/logs/: __init__.py
acra/graph/: checkpoint.py  conditional_edges.py  edges.py  graph_visualizer.py  nodes.py  router.py  state.py  workflow.py
acra/memory/: __init__.py
acra/observability/: __init__.py  langsmith_tracing.py  metrics.py  monitoring.py  token_tracking.py
acra/prompts/: __init__.py
acra/schemas/: coder_schema.py  critic_schema.py  execution_schema.py  planner_schema.py  researcher_schema.py  shared_schema.py
acra/tools/: __init__.py  integration_test_helper.py
acra/ui/: __init__.py  animated_banner.py  banner.py  components.py  shell.py  spinner.py  theme.py
acra/utils/: __init__.py  context_manager.py  keyring_manager.py  output_formatter.py  session_manager.py
tests/: test_cli.py  test_interactive_routing.py
(+39 files in other folders)
